# enpm809e_final_spring2023

./: README.md
ARIAC/ariac_gazebo/config/trials/: faulty_gripper_sample.yaml  faulty_part_sample.yaml  flipped_part_sample.yaml  hpo_sample.yaml  human_assembly.yaml  human_kitting.yaml  human_sample.yaml  kitting_assembly.yaml
ARIAC/ariac_gazebo/models/human/: model.sdf
ARIAC/ariac_plugins/src/: task_manager_plugin.cpp
ariac_809e/ariac_gazebo/: CMakeLists.txt
ariac_809e/ariac_gazebo/config/trials/: final.yaml  human_kitting.yaml  kitting2.yaml  robot_malfunction_sample.yaml  rwa4_grading.yaml  sensor_blackout_sample.yaml
ariac_809e/ariac_gazebo/launch/: ariac.launch.py
ariac_809e/ariac_gazebo/models/human/: model.sdf
ariac_809e/ariac_gazebo/nodes/: aruco_node.py  object_tf_broadcaster.py  robot_controller_switcher_node.py
ariac_809e/ariac_gazebo/worlds/: ariac.world
ariac_809e/ariac_human/rviz/: navigation.rviz
ariac_809e/ariac_moveit_config/launch/: ariac_robots_moveit.launch.py
ariac_809e/ariac_moveit_config/rviz/: moveit.rviz
ariac_809e/ariac_plugins/src/: object_disposal_plugin.cpp  task_manager_plugin.cpp  vacuum_gripper_plugin.cpp
ariac_809e/ariac_sensors/models/agv_tray_sensor/: model.sdf
ariac_809e/test_competitor/config/: sensors.yaml
ariac_809e/test_competitor/src/: competitor.cpp
aruco_809e_interfaces/: CMakeLists.txt  package.xml
bot_nav2_demo/: package.xml  setup.cfg  setup.py
bot_nav2_demo/bot_nav2_demo/: nav2_demo.py
bot_nav2_demo/maps/: my_map.pgm  my_map.yaml
competitor_interfaces/: CMakeLists.txt
competitor_interfaces/msg/: Robots.msg
competitor_interfaces/srv/: ChangeGripper.srv  EnterToolChanger.srv  ExitToolChanger.srv  MovePartToAGV.srv  MoveTrayToAGV.srv  PickupPart.srv  PickupTray.srv  PlacePartInTray.srv  PlaceTrayOnAGV.srv  RetractFromAGV.srv
enpm809e_interfaces/: CMakeLists.txt  package.xml
enpm809e_interfaces/msg/: WeatherStation.msg
enpm809e_interfaces_demo/: package.xml  setup.cfg  setup.py
enpm809e_interfaces_demo/enpm809e_interfaces_demo/: demo.py  server.py
first_package/: package.xml  setup.py
first_package/config/: params.yaml
first_package/first_package/: publisher_node.py  subscriber_node.py
first_package/launch/: first_package.launch.py
navigation_809e/: package.xml  setup.cfg  setup.py
navigation_809e/navigation_809e/: navigation_809e.py
robot_commander/: CMakeLists.txt  package.xml
robot_commander/etc/: commands.txt
robot_commander/include/robot_commander/: floor_robot_commander.hpp
robot_commander/launch/: robot_commander.launch.py
robot_commander/robot_commander/: competition_interface.py  robot_commander_interface.py  utils.py
robot_commander/scripts/: floor_robot_main.py
robot_commander/src/: floor_robot_commander.cpp
tf_package/: package.xml  setup.cfg  setup.py
tf_package/tf_package/: rwa4_node.py  tf_node.py
